Update README.md with run instructions